resolve css bug on mobile device

--- a/src/Assets/Style/main.scss
+++ b/src/Assets/Style/main.scss
@@ -110,5 +110,6 @@ input::-webkit-inner-spin-button {
 
   .hotel__card, .trip__item {
     max-width: 100% !important;
+    width: 100% !important;
   }
 }
